--- a/src/styles/_App.scss
+++ b/src/styles/_App.scss
@@ -7,11 +7,9 @@ body {
     display: grid;
     grid-template-columns: 20% 75%;
 
-    div {
-      &:nth-child(2) {
-        display: grid;
-        grid-template-columns: 45% 45%;
-      }
+    .grid-45 {
+      display: grid;
+      grid-template-columns: 45% 45%;
     }
   }
 }
@@ -24,11 +22,9 @@ body {
       display: flex;
       flex-wrap: wrap;
 
-      div {
-        &:nth-child(2) {
-          display: flex;
-          flex-direction: column;
-        }
+      .grid-45 {
+        display: flex;
+        flex-direction: column;
       }
     }
   }
@@ -42,12 +38,10 @@ body {
       display: flex;
       flex-wrap: wrap;
 
-      div {
-        &:nth-child(2) {
-          display: flex;
-          flex-direction: column;
-          width: 100%;
-        }
+      .grid-45 {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
       }
     }
   }
@@ -61,13 +55,10 @@ body {
       display: grid;
       grid-template-columns: 30% 65%;
 
-      div {
-        width: 100%;
-        &:nth-child(2) {
-          display: grid;
-          grid-template-columns: 100%;
-          grid-row-gap: 30px;
-        }
+      .grid-45 {
+        display: grid;
+        grid-template-columns: 100%;
+        grid-row-gap: 30px;
       }
     }
   }
